// go get github.com/gogo/protobuf/protoc-gen-gogo
// protoc --proto_path=/home/at15/workspace/src/:. --gogo_out=. common.proto
syntax = "proto3";

package common;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.sizer_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;

message SeriesMeta {
    uint64 id = 1;
    int64 type = 2;
    int64 precision = 3;
    string name = 4;
    map<string, string> tags = 5;
}

message IntPoint {
    int64 T = 1;
    int64 V = 2;
}

message IntSeries {
    SeriesMeta meta = 1 [(gogoproto.nullable) = false, (gogoproto.embed) = true];
    repeated IntPoint points = 2 [(gogoproto.nullable) = false];
}

message IntSeriesColumnar {
    SeriesMeta meta = 1 [(gogoproto.nullable) = false, (gogoproto.embed) = true];
    repeated int64 T = 2;
    repeated int64 V = 3;
}

message DoublePoint {
    int64 T = 1;
    double V = 2;
}

message DoubleSeries {
    SeriesMeta meta = 1 [(gogoproto.nullable) = false, (gogoproto.embed) = true];
    repeated DoublePoint points = 2 [(gogoproto.nullable) = false];
}

message DoubleSeriesColumnar {
    SeriesMeta meta = 1 [(gogoproto.nullable) = false, (gogoproto.embed) = true];
    repeated int64 T = 2;
    repeated double V = 3;
}